[metadata]
name = gnomeVision
version = file: VERSION
description = A PDF scrape for the MetroGnome application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tyler-Carter/gnomeVision
author = Tyler Carter
author_email = gtc198@gmail.com
license = BSD3
keywords =
    music
    xml
    pdf
    scraper
    musescore
classifiers = Programming Language :: Python :: 3.13.0

[options]
python_requires = >=3.13
packages = find:
install_requires =
    opencv-python
    numpy
    musescore
    PyPDF2
    reportlab
    requests
    svglib

[options.extras_require]
docs =
    sphinx
    myst-parser
test =
    pytest
    pytest-asyncio

[options.package_data]
musescore_scraper = script.js

[options.entry_points]
console_scripts =
    musescraper = musescore_scraper:_main